--- a/templates/show/base.html
+++ b/templates/show/base.html
@@ -3,68 +3,81 @@
 <html lang="">
 
 <head>
-  <meta charset="utf8">
-  <title>Blog</title>
-  <meta name="keywords" content="SamSa" />
-  <meta name="description" content="SamSa" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="{% static 'show/css/base.css' %}" rel="stylesheet">
-  <link href="{% static 'show/css/index.css' %}" rel="stylesheet">
-  <link href="{% static 'show/css/m.css' %}" rel="stylesheet">
-  <!--[if lt IE 9]>
-<script src="js/modernizr.js"></script>
+    <meta charset="utf8">
+    <title>Blog</title>
+    <meta name="keywords" content="SamSa"/>
+    <meta name="description" content="SamSa"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="{% static 'show/css/base.css' %}" rel="stylesheet">
+    <link href="{% static 'show/css/index.css' %}" rel="stylesheet">
+{#    <link href="{% static 'show/css/infopic.css' %}" rel="stylesheet">#}
+{#    <link href="{% static 'show/css/m.css' %}" rel="stylesheet">#}
+
+{#    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>#}
+{#    <script src="{% static 'show/js/piccontent.min.js' %}" type="text/javascript"></script>#}
+    {% block css %}
+
+    {% endblock %}
+    {% block js-header %}
+
+    {% endblock %}
+    <!--[if lt IE 9]>
+<script src="{% static 'show/js/modernizr.js' %}"></script>
 <![endif]-->
 </head>
 
 <body>
-  <header>
+<header>
     <div class="logo"><a href="/">
         <h2><i>SamSa</i></h2>
-{#        <img src="{% static 'show/images/logo.png' %}">#}
+        {#        <img src="{% static 'show/images/logo.png' %}">#}
     </a>
     </div>
     <nav id="nav">
-      <ul>
-        <li><a href="{% url 'index' %}">网站首页</a></li>
-        <li><a href="{% url 'gallery' %}">我的相册</a></li>
-        <li><a href="">我的日记</a></li>
-        <li><a href="">关于我</a></li>
-        <li><a href="">留言</a></li>
-        <li><a href="">内容页</a></li>
-        <li><a href="">内容页</a></li>
-      </ul>
+        <ul>
+            <li><a href="{% url 'index' %}">网站首页</a></li>
+            <li><a href="{% url 'gallery' %}">我的相册</a></li>
+            <li><a href="">我的日记</a></li>
+            <li><a href="">关于我</a></li>
+            <li><a href="">留言</a></li>
+            {#            <li><a href="">内容页</a></li>#}
+            {#            <li><a href="">内容页</a></li>#}
+        </ul>
     </nav>
     <script>
-      window.onload = function () {
-        var obj = null;
-        var As = document.getElementById('nav').getElementsByTagName('a');
-        obj = As[0];
-        for (i = 1; i < As.length; i++) {
-          if (window.location.href.indexOf(As[i].href) >= 0)
-            obj = As[i];
+        window.onload = function () {
+            var obj = null;
+            var As = document.getElementById('nav').getElementsByTagName('a');
+            obj = As[0];
+            for (i = 1; i < As.length; i++) {
+                if (window.location.href.indexOf(As[i].href) > 0) {
+                    alert(window.location.href);
+                    alert(As[i].href);
+                    obj = As[i];
+                }
+            }
+            obj.id = 'selected'
         }
-        obj.id = 'selected'
-      }
     </script>
-  </header>
-  <div class="mnav">
+</header>
+<div class="mnav">
     <ul>
-      <li><a href="{% url 'index' %}">首页</a></li>
-      <li><a href="{% url 'gallery' %}">相册</a></li>
-      <li><a href="">日记</a></li>
-      <li><a href="">关于</a></li>
-      <li><a href="">留言</a></li>
-      <li><a href="">内容页</a></li>
-      <li><a href="">内容页</a></li>
+        <li><a href="{% url 'index' %}">首页</a></li>
+        <li><a href="{% url 'gallery' %}">相册</a></li>
+        <li><a href="">日记</a></li>
+        <li><a href="">关于</a></li>
+        <li><a href="">留言</a></li>
+        {#        <li><a href="">内容页</a></li>#}
+        {#        <li><a href="">内容页</a></li>#}
     </ul>
-  </div>
+</div>
 
-  {% block content %}
+{% block content %}
 
-  {% endblock %}
-  <footer>
+{% endblock %}
+<footer>
     <p><a href="/" target="">SamSa</a> <a href="/"></a></p>
-  </footer>
+</footer>
 
 </body>
 
