--- a/templates/show/base.html
+++ b/templates/show/base.html
@@ -28,7 +28,7 @@
 
 <body>
 <header>
-    <div class="logo"><a href="/">
+    <div class="logo"><a>
         <h2><i>SamSa</i></h2>
         {#        <img src="{% static 'show/images/logo.png' %}">#}
     </a>
