--- a/templates/show/info.html
+++ b/templates/show/info.html
@@ -63,7 +63,7 @@
             <div class="guanzhu">
                 <h2>关注我 么么哒</h2>
                 <ul>
-{#                    <img src="../../static/show/images/wx.jpg">#}
+                    <img src="../../static/show/images/wx.jpg">
                 </ul>
             </div>
         </div>
@@ -74,8 +74,8 @@
                 <h3 class="news_title">{{ article_title }}</h3>
                 <div class="bloginfo">
                     <ul>
-                        <li class="author">作者：<a href="/">{{ nickname }}</a></li>
-                        <li class="lmname"><a href="/">{{ category_title }}</a></li>
+                        <li class="author">作者：<a>{{ nickname }}</a></li>
+                        <li class="lmname">类别：<a href="/">{{ category_title }}</a></li>
                         <li class="timer">时间：{{ article_create_at }}</li>
                         <li class="view">{{ article_views }}人已阅读</li>
                     </ul>
