--- a/templates/show/info.html
+++ b/templates/show/info.html
@@ -17,58 +17,7 @@
 {% endblock %}
 {% block content %}
     <article>
-        <div class="l_box">
-            <div class="search">
-                <form action="/e/search/index.php" method="post" name="searchform" id="searchform">
-                    <input name="keyboard" id="keyboard" class="input_text" value="请输入关键字词"
-                           style="color: rgb(153, 153, 153);"
-                           onfocus="if(value=='请输入关键字词'){this.style.color='#000';value=''}"
-                           onblur="if(value==''){this.style.color='#999';value='请输入关键字词'}" type="text">
-                    <input name="show" value="title" type="hidden">
-                    <input name="tempid" value="1" type="hidden">
-                    <input name="tbname" value="news" type="hidden">
-                    <input name="Submit" class="input_submit" value="搜索" type="submit">
-                </form>
-            </div>
-            <div class="fenlei">
-                <h2>文章分类</h2>
-                <ul id="category">
-                    {#                    动态加载分类#}
-                </ul>
-            </div>
-            <div class="tuijian">
-                <h2>站长推荐</h2>
-                <ul id="rcmd_blog">
-                </ul>
-            </div>
-            <div class="tuijian">
-                <h2>点击排行</h2>
-                <ul>
-                    <li><a href="/">你是什么人便会遇上什么人</a></li>
-                    <li><a href="/">帝国cms 列表页调用子栏目，没有则不显示栏目名称</a></li>
-                    <li><a href="/">第二届 优秀个人博客模板比赛参选活动</a></li>
-                    <li><a href="/">个人博客模板《绅士》后台管理</a></li>
-                    <li><a href="/">你是什么人便会遇上什么人</a></li>
-                    <li><a href="/">帝国cms 列表页调用子栏目，没有则不显示栏目名称</a></li>
-                    <li><a href="/">第二届 优秀个人博客模板比赛参选活动</a></li>
-                    <li><a href="/">个人博客模板《绅士》后台管理</a></li>
-                </ul>
-            </div>
-            <div class="cloud">
-                <h2>标签云</h2>
-                <ul id="tag_cloud">
-                    {#                    ajax添加标签#}
-                </ul>
-            </div>
-            <div class="guanzhu">
-                <h2>关注我 么么哒</h2>
-                <ul>
-                    <img src="../../static/show/images/wx.jpg">
-                </ul>
-            </div>
-        </div>
-
-
+        {% include 'show/blog_left_box.html' %}
         <div class="infosbox">
             <div class="newsview">
                 <h3 class="news_title">{{ article_title }}</h3>
@@ -114,7 +63,7 @@
                 <div class="nextinfo">
                     {#                    <p>上一篇：<a href="{% url '' %}">作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</a></p>#}
                     {#                    <p>下一篇：<a href="{">返回列表</a></p>#}
-                    <p><a href="{% url 'blog:index' %}">返回文章列表</a></p>
+                    <p><a href="{% url 'blog:blog_list' %}">返回文章列表</a></p>
                 </div>
                 <div class="news_pl">
                     <h2>文章评论</h2>
