--- a/templates/show/base_index.html
+++ b/templates/show/base_index.html
@@ -1,6 +1,10 @@
 {% extends 'show/base.html' %}
 {% load static %}
+{% block js-header %}
+    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>
 
+    <script src="{% static 'show/js/blog_show.js' %}"></script>
+{% endblock %}
 {% block content %}
     <article>
         <div class="l_box">
@@ -35,25 +39,13 @@
                 </form>
             </div>
             <div class="fenlei">
-                <h2>文章分类</h2>
-                <ul>
-                    <li><a href="/">学无止境（33）</a></li>
-                    <li><a href="/">日记（19）</a></li>
-                    <li><a href="/">慢生活（520）</a></li>
-                    <li><a href="/">美文欣赏（40）</a></li>
+                <h2 >文章分类</h2>
+                <ul id="category">
                 </ul>
             </div>
             <div class="tuijian">
-                <h2>站长推荐</h2>
-                <ul>
-                    <li><a href="/">你是什么人便会遇上什么人</a></li>
-                    <li><a href="/">帝国cms 列表页调用子栏目，没有则不显示栏目名称</a></li>
-                    <li><a href="/">第二届 优秀个人博客模板比赛参选活动</a></li>
-                    <li><a href="/">个人博客模板《绅士》后台管理</a></li>
-                    <li><a href="/">你是什么人便会遇上什么人</a></li>
-                    <li><a href="/">帝国cms 列表页调用子栏目，没有则不显示栏目名称</a></li>
-                    <li><a href="/">第二届 优秀个人博客模板比赛参选活动</a></li>
-                    <li><a href="/">个人博客模板《绅士》后台管理</a></li>
+                <h2 >站长推荐</h2>
+                <ul id="rcmd_blog">
                 </ul>
             </div>
             <div class="links">
@@ -72,6 +64,6 @@
 
         {% block r_box %}
 
-            {% endblock %}
+        {% endblock %}
     </article>
 {% endblock %}
