--- a/templates/show/base.html
+++ b/templates/show/base.html
@@ -10,11 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static 'show/css/base.css' %}" rel="stylesheet">
     <link href="{% static 'show/css/index.css' %}" rel="stylesheet">
-{#    <link href="{% static 'show/css/infopic.css' %}" rel="stylesheet">#}
-{#    <link href="{% static 'show/css/m.css' %}" rel="stylesheet">#}
+    {#    <link href="{% static 'show/css/infopic.css' %}" rel="stylesheet">#}
+    {#    <link href="{% static 'show/css/m.css' %}" rel="stylesheet">#}
 
-{#    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>#}
-{#    <script src="{% static 'show/js/piccontent.min.js' %}" type="text/javascript"></script>#}
+    {#    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>#}
+    {#    <script src="{% static 'show/js/piccontent.min.js' %}" type="text/javascript"></script>#}
     {% block css %}
 
     {% endblock %}
@@ -36,7 +36,9 @@
     <nav id="nav">
         <ul>
             <li><a href="{% url 'index' %}">网站首页</a></li>
-            <li><a href="{% url 'gallery' %}">我的相册</a></li>
+            {% if request.user.is_superuser %}
+                <li><a href="{% url 'gallery' %}">我的相册</a></li>
+            {% endif %}
             <li><a href="{% url 'blog:blog_list' %}">博客</a></li>
             <li><a href="">关于我</a></li>
             <li><a href="">留言</a></li>
@@ -63,7 +65,9 @@
 <div class="mnav">
     <ul>
         <li><a href="{% url 'index' %}">首页</a></li>
-        <li><a href="{% url 'gallery' %}">相册</a></li>
+        {% if request.user.is_superuser %}
+            <li><a href="{% url 'gallery' %}">相册</a></li>
+        {% endif %}
         <li><a href="{% url 'blog:blog_list' %}">博客</a></li>
         <li><a href="">关于</a></li>
         <li><a href="">留言</a></li>
