--- a/templates/show/base_index.html
+++ b/templates/show/base_index.html
@@ -4,6 +4,7 @@
     <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>
 
     <script src="{% static 'show/js/blog_show.js' %}"></script>
+    <script src="{% static 'show/js/gallery_rcmd.js' %}"></script>
 {% endblock %}
 {% block content %}
     <article>
@@ -17,13 +18,7 @@
             </div>
             <div class="wdxc">
                 <h2>我的相册</h2>
-                <ul>
-                    <li><a href="/"><img src="../../static/show/images/7.jpg"></a></li>
-                    <li><a href="/"><img src="../../static/show/images/8.jpg"></a></li>
-                    <li><a href="/"><img src="../../static/show/images/9.jpg"></a></li>
-                    <li><a href="/"><img src="../../static/show/images/10.jpg"></a></li>
-                    <li><a href="/"><img src="../../static/show/images/11.jpg"></a></li>
-                    <li><a href="/"><img src="../../static/show/images/12.jpg"></a></li>
+                <ul id="gallery-top">
                 </ul>
             </div>
             <div class="search">
