点赞后台, cache优化

--- a/templates/show/list.html
+++ b/templates/show/list.html
@@ -4,7 +4,7 @@
     <link href="{% static 'show/css/m.css' %}" rel="stylesheet">
 {% endblock %}
 {% block js-header %}
-    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>
+{#    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>#}
     <script src="{% static 'show/js/blog_show.js' %}"></script>
 {% endblock %}
 {% block content %}
