--- a/templates/show/base.html
+++ b/templates/show/base.html
@@ -10,11 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static 'show/css/base.css' %}" rel="stylesheet">
     <link href="{% static 'show/css/index.css' %}" rel="stylesheet">
+    <link rel="icon" href="{% static 'show/imgs/icon.png' %}" type="image/x-icon">
     {#    <link href="{% static 'show/css/infopic.css' %}" rel="stylesheet">#}
     {#    <link href="{% static 'show/css/m.css' %}" rel="stylesheet">#}
 
-    {#    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>#}
-    {#    <script src="{% static 'show/js/piccontent.min.js' %}" type="text/javascript"></script>#}
+        <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'show/js/nav.js' %}"></script>
+{#        <script src="{% static 'show/js/piccontent.min.js' %}" type="text/javascript"></script>#}
     {% block css %}
 
     {% endblock %}
@@ -40,27 +42,12 @@
                 <li><a href="{% url 'gallery' %}">我的相册</a></li>
             {% endif %}
             <li><a href="{% url 'blog:blog_list' %}">博客</a></li>
-            <li><a href="">关于我</a></li>
-            <li><a href="">留言</a></li>
+            <li><a>关于我</a></li>
+            <li><a>留言</a></li>
             {#            <li><a href="">内容页</a></li>#}
             {#            <li><a href="">内容页</a></li>#}
         </ul>
     </nav>
-    <script>
-        window.onload = function () {
-            var obj = null;
-            var As = document.getElementById('nav').getElementsByTagName('a');
-            obj = As[0];
-            for (i = 1; i < As.length; i++) {
-                if (window.location.href.indexOf(As[i].href) > 0) {
-                    alert(window.location.href);
-                    alert(As[i].href);
-                    obj = As[i];
-                }
-            }
-            obj.id = 'selected'
-        }
-    </script>
 </header>
 <div class="mnav">
     <ul>
@@ -69,8 +56,8 @@
             <li><a href="{% url 'gallery' %}">相册</a></li>
         {% endif %}
         <li><a href="{% url 'blog:blog_list' %}">博客</a></li>
-        <li><a href="">关于</a></li>
-        <li><a href="">留言</a></li>
+        <li><a>关于</a></li>
+        <li><a>留言</a></li>
         {#        <li><a href="">内容页</a></li>#}
         {#        <li><a href="">内容页</a></li>#}
     </ul>
