--- a/templates/show/base_index.html
+++ b/templates/show/base_index.html
@@ -1,7 +1,7 @@
 {% extends 'show/base.html' %}
 {% load static %}
 {% block js-header %}
-    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>
+{#    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>#}
 
     <script src="{% static 'show/js/blog_show.js' %}"></script>
     <script src="{% static 'show/js/gallery_rcmd.js' %}"></script>
@@ -10,11 +10,7 @@
     <article>
         <div class="l_box">
             <div class="about_me">
-                <h2>关于我</h2>
-                <ul>
-                    <i><img src="../../static/show/images/4.jpg"></i>
-                    <p><b>杨青</b>，一个80后草根女站长！09年入行。一直潜心研究web前端技术，一边工作一边积累经验，分享一些个人博客模板，以及SEO优化等心得。</p>
-                </ul>
+                    <img src="{% static 'show/imgs/avatar.png' %}">
             </div>
             <div class="wdxc">
                 <h2>我的相册</h2>
@@ -22,7 +18,7 @@
                 </ul>
             </div>
             <div class="search">
-                <form action="/e/search/index.php" method="post" name="searchform" id="searchform">
+                <form action="" method="post" name="searchform" id="searchform">
                     <input name="keyboard" id="keyboard" class="input_text" value="请输入关键字词"
                            style="color: rgb(153, 153, 153);"
                            onfocus="if(value=='请输入关键字词'){this.style.color='#000';value=''}"
@@ -43,14 +39,14 @@
                 <ul id="rcmd_blog">
                 </ul>
             </div>
-            <div class="links">
-                <h2>友情链接</h2>
-                <ul>
-                    <a href="http://www.yangqq.com">杨青个人博客</a> <a href="http://www.yangqq.com">杨青博客</a>
-                </ul>
-            </div>
+{#            <div class="links">#}
+{#                <h2>友情链接</h2>#}
+{#                <ul>#}
+{#                    <a href="http://www.yangqq.com">杨青个人博客</a> <a href="http://www.yangqq.com">杨青博客</a>#}
+{#                </ul>#}
+{#            </div>#}
             <div class="guanzhu">
-                <h2>关注我 么么哒</h2>
+                <h2>么么哒</h2>
                 <ul>
                     <img src="../../static/show/images/wx.jpg">
                 </ul>
