--- a/templates/show/info.html
+++ b/templates/show/info.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block js-header %}
-    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>
+    {#    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>#}
     <script src="{% static 'show/js/blog_show.js' %}"></script>
     {#    markdown 代码高亮#}
     {#<script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>#}
@@ -24,20 +24,19 @@
                 <div class="bloginfo">
                     <ul>
                         <li class="author">作者：<a>{{ nickname }}</a></li>
-                        <li class="lmname">类别：<a href="/">{{ category_title }}</a></li>
+                        <li class="lmname">类别：<a
+                                href="{% url 'blog:category_tag' 'category' category_id %}">{{ category_title }}</a>
+                        </li>
                         <li class="timer">时间：{{ article_create_at }}</li>
                         <li class="view">{{ article_views }}人已阅读</li>
                     </ul>
                 </div>
                 <div class="tags">
                     {% for foo in tags %}
-                        <a href="/" target="_blank">
+                        <a href="{% url 'blog:category_tag' 'tag' foo.id %}">
                             {{ foo.tag_title }}</a>
                     {% endfor %}
 
-                    {#            <a href="/" target="_blank">#}
-                    {#            个人博客</a> &nbsp; #}
-                    {#            <a href="/" target="_blank">小世界</a> #}
                 </div>
 
                 <div class="news_about">
@@ -52,17 +51,21 @@
 
                 </div>
                 <div class="share">
-                    <p class="diggit"><a
-                            href="JavaScript:makeRequest('/e/public/digg/?classid=3&amp;id=19&amp;dotop=1&amp;doajax=1&amp;ajaxarea=diggnum','EchoReturnedText','GET','');">
+                    <p class="diggit"><a>
                         很赞哦！ </a>(<b id="diggnum">
-                        <script type="text/javascript" src="/e/public/ViewClick/?classid=2&id=20&down=5"></script>
-                        13
+                        {{ like_num }}
                     </b>)
                     </p>
                 </div>
                 <div class="nextinfo">
-                    {#                    <p>上一篇：<a href="{% url '' %}">作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</a></p>#}
-                    {#                    <p>下一篇：<a href="{">返回列表</a></p>#}
+                    {% if previous %}
+                        <p>上一篇：<a href="{% url 'blog:blog_show' previous.id %}">{{ previous.article_title }}</a></p>
+
+                    {% endif %}
+                    {% if next %}
+                        <p>下一篇：<a href="{% url 'blog:blog_show' next.id %}">{{ next.article_title }}</a></p>
+
+                    {% endif %}
                     <p><a href="{% url 'blog:blog_list' %}">返回文章列表</a></p>
                 </div>
                 <div class="news_pl">
