--- a/templates/show/infopic.html
+++ b/templates/show/infopic.html
@@ -6,32 +6,26 @@
     <link href="{% static 'show/css/m.css' %}" rel="stylesheet">
 {% endblock %}
 {% block js-header %}
-    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>
+    {#    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>#}
     <script src="{% static 'show/js/piccontent.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'show/js/gallery_rcmd.js' %}"></script>
 {% endblock %}
 {% block content %}
     <article>
         <div class="l_box">
             <div class="about_me">
-                <h2>关于我</h2>
-                <ul>
-                    <i><img src="{% static 'show/imgs/avatar.png' %}" style="width: 100%; height: 100%"></i>
-                    <p><b>杨青</b>，一个80后草根女站长！09年入行。一直潜心研究web前端技术，一边工作一边积累经验，分享一些个人博客模板，以及SEO优化等心得。</p>
-                </ul>
+                {#                <h2>关于我</h2>#}
+                {#                <ul>#}
+                <img src="{% static 'show/imgs/avatar.png' %}" style="height: 100%">
+                {#                </ul>#}
             </div>
             <div class="wdxc">
                 <h2>我的相册</h2>
-                <ul>
-                    <li><a href="/"><img src="{% static 'show/images/7.jpg' %}"></a></li>
-                    <li><a href="/"><img src="{% static 'show/images/8.jpg' %}"></a></li>
-                    <li><a href="/"><img src="{% static 'show/images/9.jpg' %}"></a></li>
-                    <li><a href="/"><img src="{% static 'show/images/10.jpg' %}"></a></li>
-                    <li><a href="/"><img src="{% static 'show/images/11.jpg' %}"></a></li>
-                    <li><a href="/"><img src="{% static 'show/images/12.jpg' %}"></a></li>
+                <ul id="gallery-top">
                 </ul>
             </div>
             <div class="guanzhu">
-                <h2>关注我 么么哒</h2>
+                <h2>么么哒</h2>
                 <ul>
                     <img src="{% static 'show/images/wx.jpg' %}">
                 </ul>
@@ -45,7 +39,7 @@
                     <div class="close2"><a class="closebtn1" title="关闭" href="javascript:void(0)"></a></div>
                     <div class="replay">
                         <h2 id="div-end-h2"> 已到第一张图片了。 </h2>
-                        <p><a class="replaybtn1" href="javascript:;">重新播放</a></p>
+                        <p><a class="replaybtn1" href="javascript:">重新播放</a></p>
                     </div>
                 </div>
             </div>
@@ -129,11 +123,10 @@
                 </ul>
             </div>
             <div class="share">
-                <p class="diggit"><a
-                        href="JavaScript:makeRequest('/e/public/digg/?classid=3&amp;id=19&amp;dotop=1&amp;doajax=1&amp;ajaxarea=diggnum','EchoReturnedText','GET','');">
-                    很赞哦！ </a>(<b id="diggnum">
-                    <script type="text/javascript" src="/e/public/ViewClick/?classid=2&id=20&down=5"></script>
-                    13</b>)
+                <p class="diggit"><a>
+                    很赞哦！ </a>
+                    (<b id="diggnum">
+                        {{ like_num }}</b>)
                 </p>
             </div>
         </div>
