--- a/templates/show/infopic.html
+++ b/templates/show/infopic.html
@@ -9,6 +9,8 @@
     {#    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>#}
     <script src="{% static 'show/js/piccontent.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'show/js/gallery_rcmd.js' %}"></script>
+    <script src="{% static 'layer/layer.js' %}"></script>
+    <script src="{% static 'show/js/like.js' %}"></script>
 {% endblock %}
 {% block content %}
     <article>
@@ -127,6 +129,13 @@
                     很赞哦！ </a>
                     (<b id="diggnum">
                         {{ like_num }}</b>)
+                    <script>
+                        $(function () {
+                            $('#diggnum').click(function () {
+                                click_like("{% url 'gallery:gallery_like' %}", {{ id }})
+                            })
+                        });
+                    </script>
                 </p>
             </div>
         </div>
