--- a/templates/show/base_index.html
+++ b/templates/show/base_index.html
@@ -21,14 +21,10 @@
 
             </div>
             <div class="search">
-                <form action="" method="post" name="searchform" id="searchform">
-                    <input name="keyboard" id="keyboard" class="input_text" value="请输入关键字词"
+                <form action="{% url 'haystack_search' %}" method="get" name="searchform" id="searchform">
+                    <input name="q" id="keyboard" class="input_text" placeholder="请输入关键字词"
                            style="color: rgb(153, 153, 153);"
-                           onfocus="if(value=='请输入关键字词'){this.style.color='#000';value=''}"
-                           onblur="if(value==''){this.style.color='#999';value='请输入关键字词'}" type="text">
-                    <input name="show" value="title" type="hidden">
-                    <input name="tempid" value="1" type="hidden">
-                    <input name="tbname" value="news" type="hidden">
+                        type="text">
                     <input name="Submit" class="input_submit" value="搜索" type="submit">
                 </form>
             </div>
