--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -1,20 +1,31 @@
 {% extends 'show/base.html' %}
 {% load static %}
 {% block css %}
+    <style>
+        .highlight {
+            color: #912CEE;
+            font-weight: bold;
+        }
+    </style>
     <link href="{% static 'show/css/m.css' %}" rel="stylesheet">
+
 {% endblock %}
 {% block js-header %}
     {#    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>#}
     <script src="{% static 'show/js/blog_show.js' %}"></script>
+    <script src="{% static 'show/js/jquery.highlight.js' %}"></script>
+
 {% endblock %}
 {% block content %}
     <article>
         {% include 'show/blog_left_box.html' %}
-        <div class="r_box">
+        <div class="r_box light">
             {% for foo in page %}
-                <li><i><a href="{% url 'blog:blog_show' foo.object.id %}">
-                    <img src="{{ foo.article_img }}"></a></i>
-                    <h3><a href="{% url 'blog:blog_show' foo.object.id %}">{{ foo.object.article_title }}</a></h3>
+                <li>
+                    <i><a href="{% url 'blog:blog_show' foo.object.id %}">
+                        <img src="{{ foo.article_img }}"></a></i>
+                    <h3><a href="{% url 'blog:blog_show' foo.object.id %}" class="highlight">
+                        {{ foo.object.article_title }}</a></h3>
                     <p>{{ foo.object.article_commend }}</p>
                 </li>
             {% endfor %}
@@ -42,7 +53,31 @@
             </div>
         </div>
     </article>
+    <script>
+        $(function () {
+            function GetRequest() {
+                var url = location.search; //获取url中"?"符后的字串
+                var theRequest = {};
+                if (url.indexOf("?") !== -1) {
+                    var str = url.substr(1);
+                    strs = str.split("&");
+                    for (var i = 0; i < strs.length; i++) {
+                        theRequest[strs[i].split("=")[0]] = decodeURI(strs[i].split("=")[1]);
+                    }
+                }
+                return theRequest;
+            }
+
+            //调用
+            var Request = GetRequest();
+            var q = Request['q'];
+            var content = $('.highlight_content').val();
+            var keyword = $('.light');
+            keyword.highlight(q);
+        });
+    </script>
 {% endblock %}
+
 
 
 
