--- a/templates/show/info.html
+++ b/templates/show/info.html
@@ -13,6 +13,7 @@
     <script src="{% static 'show/js/blog_show.js' %}"></script>
     <script src="{% static 'layer/layer.js' %}"></script>
     <script src="{% static 'show/js/like.js' %}"></script>
+{#    <script src="/static/tiny_mce/tiny_mce.js"></script>#}
     {#    markdown 代码高亮#}
     {#<script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>#}
     {#    <script >hljs.initHighlightingOnLoad();</script>#}
