--- a/templates/show/infopic.html
+++ b/templates/show/infopic.html
@@ -125,13 +125,13 @@
                 </ul>
             </div>
             <div class="share">
-                <p class="diggit"><a>
+                <p class="diggit" id="diggit"><a>
                     很赞哦！ </a>
                     (<b id="diggnum">
                         {{ like_num }}</b>)
                     <script>
                         $(function () {
-                            $('#diggnum').click(function () {
+                            $('#diggit').click(function () {
                                 click_like("{% url 'gallery:gallery_like' %}", {{ id }})
                             })
                         });
