--- a/templates/show/info.html
+++ b/templates/show/info.html
@@ -6,6 +6,12 @@
     <link href="{% static 'show/css/m.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/pygments-css/autumn.css' %}">
     <link rel="stylesheet" href="{% static 'layui/css/layui.css' %}">
+    <style>
+    .gbko img{
+        width: 20px;
+        height: 20px;
+    }
+    </style>
     {#    <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">#}
 {% endblock %}
 
@@ -13,12 +19,6 @@
     {#    <script src="{% static 'show/js/jquery.min.js' %}" type="text/javascript"></script>#}
     <script src="{% static 'show/js/blog_show.js' %}"></script>
     <script src="{% static 'layui/layui.js' %}"></script>
-    <script>
-        layui.use(['layer', 'form'], function () {
-            var layer = layui.layer
-                , form = layui.form;
-        })
-    </script>
     <script src="{% static 'show/js/like.js' %}"></script>
     {#    <script src="/static/tiny_mce/tiny_mce.js"></script>#}
     {#    markdown 代码高亮#}
@@ -61,13 +61,13 @@
 
                 </div>
                 <div class="share">
-                    <p class="diggit"><a>
+                    <p class="diggit" id="diggit"><a>
                         很赞哦！ </a>(<b id="diggnum">
                         {{ like_num }}
 
                         <script>
                             $(function () {
-                                $('#diggnum').click(function () {
+                                $('#diggit').click(function () {
                                     click_like("{% url 'blog:blog_like' %}", {{ id }})
                                 })
                             });
@@ -90,24 +90,14 @@
                 <div class="news_pl">
                     <h2>文章评论</h2>
                     <ul>
-                        <li>
-                            <div class="gbko">
-                                @Sam: <p style="text-indent: 50px">留言内容</p>
-                                <a class="layui-badge-rim reply" style="cursor:pointer" id="1">回复</a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="gbko">
-                                @Sam: <p style="text-indent: 50px">留言内容</p>
-                                <a class="layui-badge-rim reply" id="1">回复</a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="gbko">
-                                @Sam: <p style="text-indent: 50px">留言内容</p>
-                                <a class="layui-badge-rim reply">回复</a>
-                            </div>
-                        </li>
+                        {% for foo in comment %}
+                            <li>
+                                <div class="gbko">
+                                    ##{{ foo.create_at }}: <p style="text-indent: 50px">{{ foo.info | safe }}</p>
+                                    <a class="layui-badge-rim reply" style="cursor:pointer" id="1">回复</a>
+                                </div>
+                            </li>
+                        {% endfor %}
                     </ul>
 
                     <br>
@@ -120,6 +110,7 @@
     </article>
 
     <form class="layui-form" lay-filter="comment-form" id="comment-form" style="display: none">
+        <hr>
         <div class="layui-form-item">
             <label class="layui-form-label">回复邮箱</label>
             <div class="layui-input-inline">
@@ -134,7 +125,7 @@
             <div class="layui-input-block">
                                 <textarea placeholder="请输入内容"
                                           style="height: 200px" name="info" class="layui-textarea"
-                                          lay-verify="required"></textarea>
+                                          id="layui-edit"></textarea>
             </div>
         </div>
         <br>
@@ -144,62 +135,7 @@
             </button>
         </div>
     </form>
-    <script>
-        layui.use(['layer', 'form'], function () {
-            var form = layui.form,
-                layer = layui.layer;
-            // 评论回复
-            $('.reply').click(function () {
-                layer.open({
-                    title: '评论',
-                    type: 1,
-                    area: ['900px', '400px'],
-                    content: $('#comment-form') //这里content是一个DOM，注意：最好该元素要存放在body最外层，否则可能被其它的相对元素所影响
-                });
-                var parent_id = $(this).attr('id');
-                form.on('submit(comment)', function (data) {
-                    data.field['parent'] = parent_id;
-                    data.field['article'] = $('#article_id').attr('article_id');
-                    comment_commit(data.field);
-                    return false;
-
-                });
-
-            });
-            // 文章评论
-            $('#comment-on').click(function () {
-                layer.open({
-                    title: '评论',
-                    type: 1,
-                    area: ['900px', '400px'],
-                    content: $('#comment-form')
-                });
-                form.on('submit(comment)', function (data) {
-                    data.field['article'] = $('#article_id').attr('article_id');
-                    comment_commit(data.field);
-                    return false;
-
-                })
-            });
-
-            // 提交评论内容
-            function comment_commit(formdata) {
-                $.ajax({
-                    url: '/blog/comment',
-                    type: 'POST',
-                    data: formdata,
-                    success: function (data) {
-                        if (data.code === 200) {
-                            layer.msg('评论成功!');
-                            console.log(data);
-                        } else {
-                            layer.msg('评论失败');
-                            console.log(data);
-                        }
-                    }
-                })
-            }
-        });
+    <script src="{% static 'show/js/comment.js' %}">
 
     </script>
 {% endblock %}
